# Transform_MovieToText

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TransformMovieToText.spec  TransformMovieToText_CPU.spec  TransformMovieToText_GPU.spec  all_conflicts.txt  config.json  debug_output.txt  error.txt  fail_details.txt  fail_msg.txt  fail_persist.txt  final_test.txt  final_test_2.txt  launch.bat  list_models.py  main.py  pyproject.toml  result.txt  ruff_analysis.json  run_test.bat  test_results.txt  tests_output.txt  tests_output_utf8.txt  thoughts.db-shm  thoughts.db-wal  verify_final.py  verify_rag_intent.py  verify_robust_parser.py
.github/workflows/: android_build.yml  android_full_sync.yml  build_whisper_android.yml  ci.yml  desktop_distribution.yml  release.yml
archive/embedding/: embedding_cache.py.bak  embeddings.py.bak  test_history_embeddings.py.bak
docs/: RAG_Strategy_1B.md  機能要件非機能要件.md  設計思想.md  開発方針.md
docs/ADR/: ADR-0001-windows-exe-distribution.md  ADR-0002-speaker-diarization-ecapa-tdnn.md  ADR-0003-decoupling-pytorch-dependency.md  ADR-0004-replace-pyautogui-to-avoid-gpl.md  ADR-0005-unified-smart-executable.md  ADR-0006-standard-app-data-locations.md  ADR-0007-exe-distribution-strategy.md  ADR-0008-config-and-provider-strategy.md  ADR-0009-automatic-model-management.md  ADR-0010-non-embedding-rag-sqlite-fts5.md  ADR-0011-local-smart-sync.md  ADR-0012-whisper-force-gpu-logic.md  ADR-0013-fix-setup-manager-hang-in-bundled-exe.md
docs/troubleshooting/: ci_flet_compatibility.md  flet_android_build_failure.md  github_actions_recovery.md  ollama_cloud_safety.md  sherpa_onnx_model_download_protobuf_error.md  system_audio_capture_corruption.md
docs/アイデアメモ/: lp_draft.md  managed_auth_billing_plan.md  web_marketing_plan.md  要件定義_3コンポーネント分離.md
logs/: app_2026-05-31_20-49-09_206367.json  current.json
models/sherpa-onnx-pyannote-segmentation-3-0/: model.int8.onnx
reports/: junit-final-final-final.xml  junit-final-final.xml  junit-final.xml  junit-local-final.xml  junit-local.xml
reports/test_history/: e2e_res.txt  final_full_final.txt  final_full_results.txt  subset_output.txt  sys_res.txt  v10_full_results.txt  v10_utf8.txt  v11_full_results.txt  v11_utf8.txt  v12_full_results.txt  v12_utf8.txt  v13_full_results.txt  v14_full_results.txt  v15_full_results.txt  v8_full_results.txt  v8_utf8.txt  v9_full_results.txt  v9_utf8.txt
scratch/shared_knowledge/: Knowledge_20260416_Project X Kickoff.md
scripts/: build_exe.py  check_gpu.py  check_licenses.py  run.bat  test_basic_gemini.py  test_gemini_direct.py  test_gemini_models.py  test_gpu_load.py  verify_diarization.py  verify_full_pipeline.py  verify_rag_intent.py
scripts/diagnostics/: debug_fts.py  debug_fts_del.py  debug_mgr.py  debug_mgr_inspect.py  debug_query.py  diag_history.py  diag_history_v3.py  find_gemma3.py  list_models_gemini.py  test_gemma3_multimodal.py  verify_embeddings.py
src/: app.py  config_manager.py  live_processor.py  logger.py  recorder.py  transcriber.py
src/controllers/: history_ctrl.py  minutes_ctrl.py  transcription_ctrl.py
src/core/: android_whisper_engine.py  config_manager.py  constants.py  database_manager.py  event_bus.py  history_mgr.py  intent_router.py  knowledge_scanner.py  live_processor.py  migrator.py  minutes_service.py  model_manager.py  platform_utils.py  query_analyzer.py  recorder_factory.py  state.py  (+6 more)
tests/: deep_diagnostic.txt  pyaudio_results.txt  test_controllers.py  test_error_resilience.py  test_fastembed_provider_pytest.py  test_hardening.py  test_history_mgr.py  test_live_processor.py  test_ollama_provider_pytest.py  test_recorder.py  test_results.txt  test_results_final.txt  test_results_v2.txt  test_results_v3.txt  test_results_v4.txt  test_results_v5.txt  test_results_v6.txt  test_results_v7.txt  test_results_v8.txt
tmp/: verify_refactoring.py
tools/: list_models.py
(+132 files in other folders)
