[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 150
target-version = "py310"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "A", "C4", "T20", "RET", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/app.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project]
name = "transform-movie-to-text"
version = "2.29.0"
description = "A UI app to extract text from video files using Whisper."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "flet>=0.21.0",
    "flet-desktop>=0.21.0",
    "google-genai",
    "python-dotenv",
    "colorlog",
    "python-event-bus",
    "requests",
    "Pillow",
    "numpy",
    "faster-whisper",
    "PyAudioWPatch; sys_platform == 'win32'",
    "psutil",
    "ollama",
    "openai",
    "opencv-python",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "ruff",
]
