[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["logs", "data", "dist", "build", "scratch", "dummy", "reports"]

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "A", "C4", "T20", "RET", "SIM"]
# Ignore complex/style-only rules that don't affect behavior
ignore = ["E501", "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915"]

[tool.ruff.lint.per-file-ignores]
"src/app.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project]
name = "transform-movie-to-text"
version = "2.41.0"
description = "A UI app to extract text from video files using Whisper."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "flet>=0.21.0",
    "flet-desktop>=0.21.0",
    "google-genai",
    "python-dotenv",
    "colorlog",
    "python-event-bus",
    "requests",
    "Pillow",
    "numpy",
    "faster-whisper",
    "PyAudioWPatch; sys_platform == 'win32'",
    "psutil",
    "ollama",
    "openai",
    "opencv-python",
    "scipy",
    "loguru>=0.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "ruff",
]
